# libtwiddle

./: .clang-format  .gitignore  .travis.yml  1.0.0.json  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES.md  HEAD.json  LICENSE  README.md  project.json  v1.0.0.json
docs/: CMakeLists.txt  bitmap.2.md  tw_bitmap.2
ex/1.0.0/: bf-uniq.html  example-bitmap-rle.html  example-bitmap.html  example-bloomfilter-a2.html  example-bloomfilter.html  example-hyperloglog.html  example-minhash.html  hll-wc.html
ex/HEAD/: bf-uniq.html  example-bitmap-rle.html  example-bitmap.html  example-bloomfilter-a2.html  example-bloomfilter.html  example-hyperloglog.html  example-minhash.html  hll-wc.html
ex/v1.0.0/: bf-uniq.html  example-bitmap-rle.html  example-bitmap.html  example-bloomfilter-a2.html  example-bloomfilter.html  example-hyperloglog.html  example-minhash.html  hll-wc.html
include/: CMakeLists.txt  libtwiddle.h  twiddle.h
include/libtwiddle/: bitmap.h  bitmap_const.h  bitmap_rle.h  bloomfilter.h  hash.h
include/libtwiddle/internal/: bitops.h  utils.h
include/twiddle/: bitmap_rle.h  bloomfilter.h  hash.h  hyperloglog.h
include/twiddle/bitmap/: bitmap.h  bitmap_rle.h
include/twiddle/bloomfilter/: bloomfilter.h  bloomfilter_a2.h
include/twiddle/countmin/: countmin.h
include/twiddle/hash/: hash.h  internal.h  metrohash.h  minhash.h  murmur3.h
include/twiddle/hyperloglog/: hyperbitbit.h  hyperloglog.h  hyperloglog_simd.h
include/twiddle/internal/: bitops.h  simd.h  utils.h
include/twiddle/utils/: hash.h  projection.h
python/: setup.py
python/tests/: test_bitmap.py  test_bitmap_rle.py  test_bloomfilter.py  test_bloomfilter_a2.py  test_helpers.py  test_hyperloglog.py  test_minhash.py
python/twiddle/: __init__.py  bitmap.py  bitmap_rle.py  bloomfilter.py  bloomfilter_a2.py  c.py  hyperloglog.py  minhash.py
src/: CMakeLists.txt  libtwiddle.pc.in
src/libtwiddle/: bitmap.c  bitmap_rle.c  bloomfilter.c  hash.c
src/twiddle/: bitmap.c  bitmap_rle.c  bloomfilter.c  hash.c  hyperloglog.c  hyperloglog_bias.c  macrology.h
src/twiddle/bitmap/: bitmap.c  bitmap_rle.c
src/twiddle/bloomfilter/: bloomfilter.c  bloomfilter_a2.c
src/twiddle/hash/: hash.c  internal.h  metrohash.c  minhash.c  murmur3.c
src/twiddle/hyperloglog/: hyperbitbit.c  hyperloglog.c  hyperloglog_bias.c  hyperloglog_simd.c
src/twiddle/utils/: hash.c  metrohash.c  murmur3.c
tests/: CMakeLists.txt  helpers.h  test-bitmap-rle.c  test-bitmap.c  test-bloomfilter-a2.c  test-bloomfilter.c  test-hyperloglog.c  test-minhash.c  test.h
tests/benchmarks/: CMakeLists.txt  bench-bitmap.c  bench-bloomfilter.c  bench-minhash.c  benchmark.h
tests/check/: CMakeLists.txt  check.c  check.h  check_error.c  check_error.h  check_impl.h  check_list.c  check_log.c  check_msg.c  check_pack.c  check_print.c  check_run.c  check_str.c  libcompat.h
tests/examples/: CMakeLists.txt  bf-uniq.c  bf-uniq.t  example-bitmap-rle.c  example-bitmap.c  example-bloomfilter-a2.c  example-bloomfilter.c  example-hyperloglog.c  example-minhash.c  hll-wc.c  hll-wc.t
tests/include/: helpers.h
tools/cmake/: FindCTargets.cmake  FindLTO.cmake  FindOptions.cmake  FindParseArguments.cmake  FindPrereqs.cmake  FindVersion.cmake
tools/cram/: ccram
tools/docurium/: Gemfile  api.docurium  gen-doc  init
tools/git/: hook-clang-format
tools/travis/: deps  python-test  test
